[tool.poetry]
name = "ai-genai-langgraph"
version = "1.0.0"
description = "A multi-agent travel booking system built with LangGraph"
authors = ["Saurabh Herwadkar"]
readme = "README.md"
license = "MIT"
packages = [{include = "travel_booking", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
langgraph = "^1.4.0"
langchain-core = "^0.4.0"
langchain-openai = "^0.4.0"
pyyaml = "^6.0.2"
pydantic = "^2.13.0"
pydantic-settings = "^2.8.0"
httpx = "^0.28.1"
aiohttp = "^3.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.5.0"
pytest-asyncio = "^0.26.0"
pytest-cov = "^6.1.0"
pytest-mock = "^3.14.0"
ruff = "^0.12.0"
mypy = "^1.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
